--- a/Breadth_First_Search_Crawler_and_Depth_First_Search_Crawler.ipynb
+++ b/Breadth_First_Search_Crawler_and_Depth_First_Search_Crawler.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Breadth First Search Crawler and Depth First Search Crawler.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/xpIbTcdgbnRB9Jcx5Bry",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNlNl7Y4AnpfwDhMb4vFjMd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1381
         },
         "outputId": "7184f74b-a30d-479a-f0c8-f4d4524321d8"
       },
@@ -50,10 +51,10 @@
         "import re\n",
         "from bs4 import BeautifulSoup\n",
         "\n",
-        "URL=[\"https://arstechnica.com\",\"https://technogeekscs.com/\",\"https://techcrunch.com/\",\"https://geekteck.net/\"]\n",
+        "URL=[\"https://arstechnica.com\",\"https://technogeekscs.com/\",\"https://techcrunch.com/\",\"https://geekteck.net/\",\"https://edition.cnn.com/\"]\n",
         "\n",
         "\n",
-        "for i in range(0,4):\n",
+        "for i in range(0,5):\n",
         "  l=[] #queue\n",
         "  visited=[]\n",
         "  counter=1   \n",
@@ -176,7 +177,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1381
         },
         "outputId": "e4442b41-466b-4ddd-b0c4-fda6bd277e95"
       },
@@ -185,15 +186,15 @@
         "import re\n",
         "from bs4 import BeautifulSoup\n",
         "\n",
-        "URL=[\"https://arstechnica.com\",\"https://technogeekscs.com/\",\"https://techcrunch.com/\",\"https://geekteck.net/\"]\n",
+        "URL=[\"https://arstechnica.com\",\"https://technogeekscs.com/\",\"https://techcrunch.com/\",\"https://geekteck.net/\",\"https://edition.cnn.com/\"]\n",
         "\n",
         "\n",
-        "for i in range(0,4):\n",
+        "for i in range(0,5):\n",
         "  l=[] #queue\n",
         "  visited=[]\n",
         "  counter=1   \n",
         "  l.append(URL[i])\n",
-        "  for counter in range(0,20):\n",
+        "  for counter in range(0,50):\n",
         "      j=l.pop()\n",
         "      print(j)\n",
         "      visited.append(j)\n",
